added summary and print methods to class stanidm

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,9 @@
 S3method(as.data.frame,summary.stanreg)
 S3method(get_surv,stanjm)
 S3method(get_surv,stansurv)
-S3method(print,stanmvreg)
-S3method(print,stanreg)
-S3method(print,summary.stanmvreg)
-S3method(print,summary.stanreg)
-S3method(summary,stanmvreg)
-S3method(summary,stanreg)
+S3method(print,stanidm)
+S3method(print,summary.idm)
+S3method(summary,stanidm)
 export(Surv)
 export(get_surv)
 export(idm_stan)
@@ -23,5 +20,4 @@ importFrom(methods,is)
 importFrom(rstan,sampling)
 importFrom(splines,bs)
 importFrom(survival,Surv)
-importMethodsFrom(rstan,summary)
 useDynLib(aeim, .registration = TRUE)
