--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,7 @@
 
 S3method(as.array,stanreg)
 S3method(as.data.frame,stanreg)
-S3method(as.data.frame,summary.stanreg)
+S3method(as.data.frame,summary.stanidm)
 S3method(as.matrix,stanreg)
 S3method(get_surv,stanjm)
 S3method(get_surv,stansurv)
