On branch loo-waic - Created waic and loo methods currently working for Weibull. - Fix bugs in methods for other distributions.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,10 +6,11 @@ S3method(as.data.frame,summary.stanidm)
 S3method(as.matrix,stanreg)
 S3method(get_surv,stanjm)
 S3method(get_surv,stansurv)
+S3method(get_y,stanidm)
+S3method(log_lik,stanidm)
 S3method(log_lik,stanjm)
 S3method(log_lik,stanmvreg)
-S3method(log_lik,stanreg)
-S3method(loo,stanreg)
+S3method(loo,stanidm)
 S3method(loo_linpred,stanreg)
 S3method(loo_model_weights,stanreg_list)
 S3method(loo_predict,stanreg)
@@ -21,11 +22,13 @@ S3method(print,kfold)
 S3method(print,stanidm)
 S3method(print,summary.idm)
 S3method(summary,stanidm)
-S3method(waic,stanreg)
+S3method(waic,stanidm)
 export(Surv)
 export(compare_models)
 export(get_surv)
-export(get_x.stanidm)
+export(get_x)
+export(get_y)
+export(get_z)
 export(idm_stan)
 export(kfold)
 export(loo_model_weights)
