--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,10 +17,15 @@ S3method(loo_predict,stanreg)
 S3method(loo_predictive_interval,stanreg)
 S3method(pairs,stanidm)
 S3method(pairs,stanreg)
+S3method(plot,survfit.stanjm)
+S3method(plot,survfit.stansurv)
+S3method(posterior_survfit,stanidm)
 S3method(print,compare_rstanarm_loos)
 S3method(print,kfold)
 S3method(print,stanidm)
 S3method(print,summary.idm)
+S3method(print,survfit.stanjm)
+S3method(print,survfit.stansurv)
 S3method(summary,stanidm)
 S3method(waic,stanidm)
 export(Surv)
@@ -35,6 +40,8 @@ export(loo_model_weights)
 export(pairs_condition)
 export(pairs_style_np)
 export(plot.stanidm)
+export(plot_stack_jm)
+export(posterior_survfit)
 export(rsimid)
 export(simsurv)
 import(Rcpp)
@@ -43,6 +50,15 @@ import(rstantools)
 import(splines2)
 importFrom(bayesplot,pairs_condition)
 importFrom(bayesplot,pairs_style_np)
+importFrom(ggplot2,aes_string)
+importFrom(ggplot2,coord_cartesian)
+importFrom(ggplot2,expand_limits)
+importFrom(ggplot2,facet_wrap)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_ribbon)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,ggplot_build)
+importFrom(ggplot2,labs)
 importFrom(lme4,glmerControl)
 importFrom(loo,loo)
 importFrom(loo,loo.function)
