--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,7 +41,7 @@ export(pairs_condition)
 export(pairs_style_np)
 export(plot.stanidm)
 export(plot_stack_jm)
-export(posterior_survfit)
+export(posterior_fit)
 export(rsimid)
 export(simsurv)
 import(Rcpp)
