--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ S3method(loo_predict,stanreg)
 S3method(loo_predictive_interval,stanreg)
 S3method(pairs,stanidm)
 S3method(pairs,stanreg)
+S3method(plot,stanidm)
 S3method(plot,survfit.stanjm)
 S3method(posterior_survfit,stanidm)
 S3method(print,compare_rstanarm_loos)
@@ -38,7 +39,6 @@ export(kfold)
 export(loo_model_weights)
 export(pairs_condition)
 export(pairs_style_np)
-export(plot.stanidm)
 export(plot_stack_jm)
 export(posterior_fit)
 export(rsimid)
